--- a/planningandacquiring/templates/planningandacquiring/demand_supply_report.html
+++ b/planningandacquiring/templates/planningandacquiring/demand_supply_report.html
@@ -6,7 +6,7 @@
 
 <div class="ui segment" id="printableArea">
     <center>
-    <br><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Philippine_Coast_Guard_%28PCG%29.svg/220px-Philippine_Coast_Guard_%28PCG%29.svg.png" width="100">
+    <br><img src="{% static 'images/k9_logo.png' %}" width="150">
     <br>Philippine Coast Guard
     <br>Maritime Security Command
         <br><b>HEADQUARTERS COAST GUARD K9 FORCE</b>
