training bugs + k9 for grading

--- a/planningandacquiring/templates/planningandacquiring/adoption_report.html
+++ b/planningandacquiring/templates/planningandacquiring/adoption_report.html
@@ -40,9 +40,9 @@
                     <td>K9 ADOPTED</td>
                 {%endif%}
                 {% if data.reason %}
-                <td>{{data.reason}}</td>
+                <td class="four wide">{{data.reason}}</td>
                 {%else%}
-                <td></td>
+                <td class="four wide"></td>
                 {%endif%}
                
             </tr>            
