--- a/training/templates/training/training_update_sar.html
+++ b/training/templates/training/training_update_sar.html
@@ -17,7 +17,26 @@
             <th>Status: {{data.training_status}}</th>
             <th>Type: {{data.status}}</th>
             <th>Capability: {{data.capability}}</th>
-            <th>Level: {{data.training_level}}</th>
+            {% if data.training_level == "Stage 0" %}
+            <th>Training Stage: Stage 1.1 </th>
+            {% elif data.training_level == "Stage 1.1" %}
+            <th>Training Stage: Stage 1.2 </th>
+            {% elif data.training_level == "Stage 1.2" %}
+            <th>Training Stage: Stage 1.3 </th>
+            {% elif data.training_level == "Stage 1.3" %}
+            <th>Training Stage: Stage 2.1 </th>
+
+            {% elif data.training_level == "Stage 2.1" %}
+            <th>Training Stage: Stage 2.2 </th>
+            {% elif data.training_level == "Stage 2.2" %}
+            <th>Training Stage: Stage 2.3 </th>
+            {% elif data.training_level == "Stage 2.3" %}
+            <th>Training Stage: Stage 3.1 </th>
+            {% elif data.training_level == "Stage 3.31" %}
+            <th>Training Stage: Stage 3.2 </th>
+            {% elif data.training_level == "Stage 3.2" %}
+            <th>Training Stage: Final Stage  </th>
+            {% endif %}
         </tr>
     </thead>
 </table>
@@ -137,9 +156,9 @@
                     Grade
                 </div>
                 {% if data.grade == "0" %}
-                    No Grade Yet
-                {% else %}
-                    {{training.grade}}
+                    <input type="text" value="0">
+                {% else %}  
+                    <input type="text" value=" {{training.grade}}">
                 {% endif %}
             </div>
         </div>
