--- a/unitmanagement/templates/unitmanagement/k9_data_trained.html
+++ b/unitmanagement/templates/unitmanagement/k9_data_trained.html
@@ -101,7 +101,25 @@
                     </div>
                     {% for data in remarks%}
                     <div class="field">
-                        <label>{{data.stage}}</label>
+                        {% if data.stage == 'Stage 0'%}
+                        <label>Stage 1.1</label>
+                        {% elif data.stage == 'Stage 1.1' %}
+                        <label>Stage 1.2</label>
+                        {% elif data.stage == 'Stage 1.2' %}
+                        <label>Stage 1.3</label>
+                        {% elif data.stage == 'Stage 1.3' %}
+                        <label>Stage 2.1</label>
+                        {% elif data.stage == 'Stage 2.1' %}
+                        <label>Stage 2.2</label>
+                        {% elif data.stage == 'Stage 2.2' %}
+                        <label>Stage 2.3</label>
+                        {% elif data.stage == 'Stage 2.3' %}
+                        <label>Stage 3.1</label>
+                        {% elif data.stage == 'Stage 3.1' %}
+                        <label>Stage 3.2</label>
+                        {% elif data.stage == 'Stage 3.2' %}
+                        <label>Stage 3.3</label>
+                        {% endif %}
                         <textarea name="" id="" rows="2" readonly>{{data.remarks}}</textarea>
                     </div>
                     {% endfor %}
