--- a/unitmanagement/templates/unitmanagement/replenishment_form.html
+++ b/unitmanagement/templates/unitmanagement/replenishment_form.html
@@ -69,62 +69,62 @@
         });
     })
 
-    $(document).ready(function() {
-        $(".type" ).bind('change', function() {
-            var url = 'replenishment_form/ajax_load_item';
-            var type = $(this).val();
-            var id_val = $(this).attr('id');
-            $.ajax({
-                url: url,
-                data: {
-                'type': type
-                },
-                success: function (data) {
-                var res = id_val.split("-");
-                $('#id_form-'+res[1]+'-item').html(data);
-                }
-            });
-
+   
+    $(".type" ).bind('change', function() {
+        var url = 'replenishment_form/ajax_load_item';
+        var type = $(this).val();
+        var id_val = $(this).attr('id');
+        $.ajax({
+            url: url,
+            data: {
+            'type': type
+            },
+            success: function (data) {
+            var res = id_val.split("-");
+            $('#id_form-'+res[1]+'-item').html(data);
+            }
         });
+
+    });
 
 
     $(".item" ).bind('change', function() {
-            var id = $(this).val();
-            var id_val = $(this).attr('id');
+        var id = $(this).val();
+        var id_val = $(this).attr('id');
 
+        var res = id_val.split("-");
+        var type = $('#id_form-'+res[1]+'-item_type').val();
+
+        var url = 'replenishment_form/ajax_load_item_food';
+        $.ajax({
+            url: url,
+            type : 'GET',
+            dataType : 'json',
+            data: {
+            'id': id,
+            'type': type,
+            },
+            success: function (data) {
             var res = id_val.split("-");
-            var type = $('#id_form-'+res[1]+'-item_type').val();
-
-            var url = 'replenishment_form/ajax_load_item_food';
-            $.ajax({
-                url: url,
-                type : 'GET',
-                dataType : 'json',
-                data: {
-                'id': id,
-                'type': type,
-                },
-                success: function (data) {
-                var res = id_val.split("-");
-                $('#id_form-'+res[1]+'-uom').val(data.uom);
-                $('#id_form-'+res[1]+'-on_hand').val(data.quantity);
-                }
-            });
-
-            });
-
-        $(".quantity" ).bind('keyup', function() {
-            var id = $(this).val();
-            var id_val = $(this).attr('id');
-
-            var res = id_val.split("-");
-            var on_hand =  $('#id_form-'+res[1]+'-on_hand').val()
-            console.log(on_hand, id)
-
-            if(id > on_hand){
-                alert('Inventory Item Insufficient.');
+            $('#id_form-'+res[1]+'-uom').val(data.uom);
+            $('#id_form-'+res[1]+'-on_hand').val(data.quantity);
             }
         });
+
+        });
+
+    $(".quantity" ).bind('change', function() {
+        var id = $(this).val();
+        var id_val = $(this).attr('id');
+
+        var res = id_val.split("-");
+        var on_hand =  $('#id_form-'+res[1]+'-on_hand').val()
+        console.log(on_hand, id)
+        
+        if(id > on_hand){
+            alert('Inventory Item Insufficient.');
+        }
     });
+  
 </script>
  {% endblock %}
