--- a/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
+++ b/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
@@ -386,13 +386,13 @@
     });
 
 	$('#tabledata1').DataTable({
-      "order": [[ 8, "asc" ],[ 5, "desc" ],[ 6, "desc" ],[ 7, "asc" ]]
+      "order": [[ 8, "asc" ],[ 5, "desc" ],[ 6, "asc" ],[ 7, "asc" ]]
     });
     $('#tabledata5').DataTable({
-      "order": [[ 7, "asc" ],[ 6, "desc" ],[ 4, "desc" ],[ 5, "desc" ],[ 1, "desc" ],[ 0, "asc" ]]
+      "order": [[ 7, "asc" ],[ 6, "asc" ],[ 4, "desc" ],[ 5, "desc" ],[ 1, "desc" ],[ 0, "asc" ]]
     });
     $('#tabledata6').DataTable({
-        "order": [[ 6, "desc" ],[ 4, "desc" ],[ 5, "desc" ],[ 1, "desc" ],[ 0, "asc" ]]
+        "order": [[ 6, "asc" ],[ 4, "desc" ],[ 5, "desc" ],[ 1, "desc" ],[ 0, "asc" ]]
     });
 
     $('.ui.radiom.checkbox').checkbox();     
